--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -34,5 +30,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "prettier": "^2.5.1"
+  },
+  "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
+  "lint": "eslint ./ --ignore-path .gitignore",
+  "lint:fix": "npm run lint -- --fix"
 }
