--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -17,8 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -32,7 +28,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "eslint": "^6.6.0",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.5.1"
   },
   "format": "prettier --write \"{,!(node_modules)/**/}*.js\"",
